--- a/agent/requirements.txt
+++ b/agent/requirements.txt
@@ -1,3 +1,14 @@
-requests
-watchdog
-PyPDF2
+fastapi
+uvicorn
+supabase
+python-multipart
+redis
+celery
+openai
+pydantic-settings
+langchain-openai
+langchain-text-splitters
+langchain-community
+tiktoken
+unstructured
+python-magic
