--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,30 @@ services:
     build:
       context: ./backend
       dockerfile: ../docker/backend.Dockerfile
+    # For production security, we only expose to internal network, 
+    # but for local dev/testing, we can keep ports open or rely on internal networking.
+    # Let's keep it accessible for now to debug if needed.
     ports:
       - "8000:8000"
     env_file:
       - .env
     depends_on:
       - redis
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: ../docker/frontend.Dockerfile
+    ports:
+      - "8501:8501"
+    depends_on:
+      - backend
+    environment:
+      # Docker internal networking URL
+      - BACKEND_URL=http://backend:8000
+    volumes:
+      # Mount volume for hot-reloading during dev
+      - ./frontend:/app
 
   redis:
     image: redis:alpine
