--- a/frontend-new/package.json
+++ b/frontend-new/package.json
@@ -51,6 +51,7 @@
     "react": "19.2.1",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^4.0.9",
     "recharts": "^3.6.0",
