fix: sidebar overlap and missing langchain dependencies

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,9 +6,11 @@ redis
 celery
 openai
 pydantic-settings
+langchain
 langchain-openai
 langchain-text-splitters
 langchain-community
+langchain-core
 tiktoken
 unstructured[pdf]
 python-magic
