--- a/frontend-new/package.json
+++ b/frontend-new/package.json
@@ -43,12 +43,14 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.88.0",
+    "@tailwindcss/typography": "^0.5.19",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "gray-matter": "^4.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
@@ -58,6 +60,7 @@
     "react-dom": "19.2.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.68.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^4.0.9",
     "recharts": "^3.6.0",
     "sonner": "^2.0.7",
