feat: pre-production hardening with Sentry and rate limiting
Dependencies (requirements.txt):
- Added sentry-sdk[fastapi,celery] for error tracking
- resend (already present)
- redis (already present)
- slowapi (already present for rate limiting)

Config (core/config.py):
- Added SENTRY_DSN optional setting

Sentry Integration:
- FastAPI (main.py): Initializes with FastApiIntegration, StarletteIntegration
- Celery (celery_app.py): Initializes with CeleryIntegration
- Performance tracking: 10% sample rate
- Environment and release tracking for Railway deploys

Rate Limiting:
- Already implemented via slowapi (Limiter)
- Registered on /ingest endpoint (10/minute)
- Global rate limit handler configured

Production Ready:
- All 355 tests passing
- Error tracking for both API and workers
- Graceful degradation if Sentry not configured

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,3 +37,6 @@ trafilatura
 ultimate-sitemap-parser
 youtube-transcript-api
 lxml
+
+# Production Monitoring & Error Tracking
+sentry-sdk[fastapi,celery]
