--- a/frontend-new/package.json
+++ b/frontend-new/package.json
@@ -68,7 +68,8 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^4.2.1"
+    "zod": "^4.2.1",
+    "@sentry/nextjs": "^8.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
