--- a/frontend-new/package.json
+++ b/frontend-new/package.json
@@ -86,5 +86,10 @@
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.2.3"
+  },
+  "overrides": {
+    "@sentry/nextjs": {
+      "next": "$next"
+    }
   }
 }
