feat: enterprise foundation - multi-model AI architecture
Phase 1: Dependencies, DB, Config, Factory

1. Dependencies (requirements.txt):
   - langchain-groq==0.2.1
   - groq==0.13.0

2. Database Migration (20251227154700_add_subscription_status.sql):
   - Added subscription_status column to user_profiles
   - Values: active, trialing, past_due, canceled, incomplete
   - Index for fast subscription checks

3. Config (core/config.py):
   - PRIMARY_MODEL: openai/gpt-4o (high intelligence)
   - SECONDARY_MODEL: groq/llama-3.3-70b-versatile (high speed)
   - GUARDRAIL_MODEL: groq/llama-3.1-8b-instant (ultra fast)
   - GROQ_API_KEY setting

4. LLM Factory (services/llm_factory.py):
   - Centralized model instantiation
   - Supports OpenAI and Groq providers
   - Convenience methods: get_primary_model(), get_secondary_model(), get_guardrail_model()
   - Lazy imports for optional Groq

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -41,3 +41,7 @@ lxml
 
 # Production Monitoring & Error Tracking
 sentry-sdk[fastapi,celery]
+
+# Multi-Model AI (Groq for high-speed Llama inference)
+langchain-groq==0.2.1
+groq==0.13.0
