--- a/frontend-new/package.json
+++ b/frontend-new/package.json
@@ -67,6 +67,7 @@
     "react-hook-form": "^7.68.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^4.0.9",
+    "react-virtualized-auto-sizer": "^2.0.0",
     "react-window": "^2.2.3",
     "recharts": "^3.6.0",
     "sonner": "^2.0.7",
@@ -83,6 +84,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9",
