team settings and tests

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -6,12 +6,11 @@ python_functions = test_*
 asyncio_mode = auto
 addopts = -v --tb=short
 
-# Environment variables for testing
-env =
-    ENVIRONMENT=test
-    SUPABASE_URL=http://localhost:54321
-    SUPABASE_SECRET_KEY=test-secret-key
-    OPENAI_API_KEY=test-key
+# Filter third-party deprecation warnings we can't fix
+filterwarnings =
+    ignore::pydantic.PydanticDeprecatedSince212
+    ignore::DeprecationWarning:pyiceberg.*
+    ignore::pytest.PytestConfigWarning
 
 # Markers
 markers =
