--- a/frontend-new/package.json
+++ b/frontend-new/package.json
@@ -70,11 +70,13 @@
     "react-virtualized-auto-sizer": "^2.0.0",
     "react-window": "^2.2.3",
     "recharts": "^3.6.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^4.2.1"
+    "zod": "^4.2.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
