--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,7 @@ pytest-asyncio==0.23.7
 langchain==0.2.5
 langchain-openai==0.1.8
 langchain-community==0.2.5
-langchain-groq==0.2.1
+langchain-groq==0.1.2
 openai==1.35.3
 tiktoken==0.7.0
 redis==5.0.6
@@ -27,7 +27,7 @@ docx2txt==0.8
 markdown==3.6
 python-magic==0.4.27
 tenacity==8.4.2
-groq==0.13.0
+groq
 locust
 pyjwt
 google-api-python-client
