fix: add missing sqlmodel and db dependencies

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,33 +1,34 @@
 fastapi>=0.111.0
 uvicorn>=0.30.1
+sqlmodel>=0.0.19
 pydantic>=2.7.4
 pydantic-settings>=2.3.4
-python-multipart>=0.0.9
-supabase>=2.5.1
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
-httpx>=0.27.0
-pytest>=8.2.2
-pytest-asyncio>=0.23.7
-langchain>=0.2.5
-langchain-openai>=0.1.8
-langchain-community>=0.2.5
-langchain-groq>=0.1.5
-openai>=1.35.3
-tiktoken>=0.7.0
-redis>=5.0.6
-celery>=5.4.0
-flower>=2.0.1
-beautifulsoup4>=4.12.3
-# requests version determined by other dependencies (resend requires <2.32)
-resend>=0.8.0
-unstructured>=0.14.9
-pdfminer.six>=20231228
-docx2txt>=0.8
-markdown>=3.6
-python-magic>=0.4.27
-tenacity>=8.4.2
-groq>=0.13.0
+python-multipart
+supabase
+python-jose[cryptography]
+passlib[bcrypt]
+httpx
+pytest
+pytest-asyncio
+langchain
+langchain-openai
+langchain-community
+langchain-groq
+openai
+tiktoken
+redis
+celery
+flower
+beautifulsoup4
+# requests unpinned for compatibility
+resend
+unstructured
+pdfminer.six
+docx2txt
+markdown
+python-magic
+tenacity
+groq
 locust
 pyjwt
 google-api-python-client
@@ -40,3 +41,6 @@ youtube-transcript-api
 lxml
 sentry-sdk[fastapi,celery]
 async-lru
+asyncpg
+psycopg2-binary
+email-validator
