--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,50 @@
-requests
-watchdog
+fastapi>=0.111.0
+uvicorn>=0.30.1
+sqlmodel>=0.0.19
+asyncpg
+psycopg2-binary
+pydantic>=2.7.4
+pydantic-settings>=2.3.4
+python-multipart
+supabase
+python-jose[cryptography]
+passlib[bcrypt]
+httpx
+pytest
+pytest-asyncio
+langchain
+langchain-openai
+langchain-community
+langchain-groq
+openai
+tiktoken
+redis
+celery
+flower
+beautifulsoup4
+# requests  <-- KEEP UNPINNED
+resend
+unstructured
+pdfminer.six
+docx2txt
+markdown
+python-magic
+tenacity
+groq
+locust
+pyjwt
+# --- Google Dependencies ---
+google-api-python-client
+google-auth-oauthlib
+google-auth-httplib2
+# ---------------------------
+cryptography
+jinja2
+slowapi
+trafilatura
+ultimate-sitemap-parser
+youtube-transcript-api
+lxml
+sentry-sdk[fastapi,celery]
+async-lru
+email-validator
