--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,44 @@
-fastapi>=0.111.0
-uvicorn>=0.30.1
-sqlmodel>=0.0.19
-asyncpg
-psycopg2-binary
-pydantic>=2.7.4
-pydantic-settings>=2.3.4
-python-multipart
-supabase
-python-jose[cryptography]
-passlib[bcrypt]
-httpx
-pytest
-pytest-asyncio
+fastapi==0.109.2
+uvicorn==0.27.1
+sqlalchemy==2.0.27
+alembic==1.13.1
+psycopg2-binary==2.9.9
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.9
+pydantic==2.6.1
+pydantic-settings==2.1.0
+openai==1.12.0
+celery==5.3.6
+redis==5.0.1
+supabase==2.3.4
+python-docx==1.1.0
+PyPDF2==3.0.1
+beautifulsoup4==4.12.3
+tiktoken==0.6.0
+sentry-sdk==1.40.3
+async-lru==2.0.4
+tenacity==8.2.3
+# --- NEWLY ADDED ---
+polar-sdk==0.1.0
+httpx==0.27.0
+sqlmodel==0.0.16
 langchain
 langchain-openai
 langchain-community
 langchain-groq
-openai
-tiktoken
-redis
-celery
-flower
-beautifulsoup4
-# requests  <-- KEEP UNPINNED
+groq
 resend
 unstructured
 pdfminer.six
 docx2txt
 markdown
 python-magic
-tenacity
-groq
 locust
 pyjwt
-# --- Google Dependencies ---
 google-api-python-client
 google-auth-oauthlib
 google-auth-httplib2
-# ---------------------------
 cryptography
 jinja2
 slowapi
@@ -45,6 +46,4 @@ trafilatura
 ultimate-sitemap-parser
 youtube-transcript-api
 lxml
-sentry-sdk[fastapi,celery]
-async-lru
 email-validator
