--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,8 +19,8 @@ tiktoken==0.6.0
 sentry-sdk==1.40.3
 async-lru==2.0.4
 tenacity==8.2.3
-# --- NEWLY ADDED ---
-polar-sdk==0.1.0
+# --- FIXED DEPENDENCIES ---
+polar-sdk==0.28.0
 httpx==0.27.0
 sqlmodel==0.0.16
 langchain
