--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ pydantic-settings==2.1.0
 openai==1.12.0
 celery==5.3.6
 redis==5.0.1
-supabase==2.3.4
+# CRITICAL FIX: Upgraded supabase to support newer httpx
+supabase==2.10.0
 python-docx==1.1.0
 PyPDF2==3.0.1
 beautifulsoup4==4.12.3
@@ -19,31 +20,18 @@ tiktoken==0.6.0
 sentry-sdk==1.40.3
 async-lru==2.0.4
 tenacity==8.2.3
-# --- NEWLY ADDED ---
-polar-sdk==0.1.0
+# CRITICAL FIX: Valid Polar SDK version
+polar-sdk==0.28.0
+# CRITICAL FIX: Compatible httpx version
 httpx==0.27.0
 sqlmodel==0.0.16
-langchain
-langchain-openai
-langchain-community
-langchain-groq
-groq
-resend
-unstructured
-pdfminer.six
-docx2txt
-markdown
-python-magic
-locust
-pyjwt
-google-api-python-client
-google-auth-oauthlib
-google-auth-httplib2
-cryptography
-jinja2
-slowapi
-trafilatura
-ultimate-sitemap-parser
-youtube-transcript-api
-lxml
-email-validator
+langchain==0.1.0
+langchain-openai==0.0.2
+langchain-community==0.0.9
+resend==0.7.0
+unstructured==0.11.0
+pdfminer.six==20231228
+docx2txt==0.8
+markdown==3.5.2
+python-magic==0.4.27
+email-validator==2.1.0.post1
