--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,19 +11,11 @@ pydantic-settings==2.1.0
 openai==1.12.0
 celery==5.3.6
 redis==5.0.1
-# CRITICAL FIX: Upgraded supabase to support newer httpx
+# CORE LIBRARIES
 supabase==2.10.0
-python-docx==1.1.0
-PyPDF2==3.0.1
-beautifulsoup4==4.12.3
-tiktoken==0.6.0
-sentry-sdk==1.40.3
-async-lru==2.0.4
-tenacity==8.2.3
-# CRITICAL FIX: Valid Polar SDK version
-polar-sdk==0.28.0
-# CRITICAL FIX: Compatible httpx version
-httpx==0.27.0
+# COMPATIBILITY FIX: Use Polar SDK version that supports httpx < 0.28
+polar-sdk<0.28.0
+# NOTE: httpx is removed to allow automatic resolution to 0.27.x
 sqlmodel==0.0.16
 langchain==0.1.0
 langchain-openai==0.0.2
@@ -35,3 +27,22 @@ docx2txt==0.8
 markdown==3.5.2
 python-magic==0.4.27
 email-validator==2.1.0.post1
+python-docx==1.1.0
+PyPDF2==3.0.1
+beautifulsoup4==4.12.3
+tiktoken==0.6.0
+sentry-sdk==1.40.3
+async-lru==2.0.4
+tenacity==8.2.3
+google-api-python-client
+google-auth-oauthlib
+google-auth-httplib2
+cryptography
+jinja2
+slowapi
+trafilatura
+ultimate-sitemap-parser
+youtube-transcript-api
+lxml
+groq
+langchain-groq
