--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,7 +30,7 @@ email-validator==2.1.0.post1
 python-docx==1.1.0
 PyPDF2==3.0.1
 beautifulsoup4==4.12.3
-tiktoken==0.6.0
+tiktoken>=0.5.2,<0.6.0
 sentry-sdk==1.40.3
 async-lru==2.0.4
 tenacity==8.2.3
