--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,11 +11,9 @@ pydantic-settings==2.1.0
 openai==1.12.0
 celery==5.3.6
 redis==5.0.1
-# CORE LIBRARIES
+# CORE: Supabase defines the httpx version (likely 0.27.x)
 supabase==2.10.0
-# COMPATIBILITY FIX: Use Polar SDK version that supports httpx < 0.28
-polar-sdk<0.28.0
-# NOTE: httpx is removed to allow automatic resolution to 0.27.x
+# NOTE: polar-sdk REMOVED to fix build
 sqlmodel==0.0.16
 langchain==0.1.0
 langchain-openai==0.0.2
@@ -27,10 +25,11 @@ docx2txt==0.8
 markdown==3.5.2
 python-magic==0.4.27
 email-validator==2.1.0.post1
+# Extras
 python-docx==1.1.0
 PyPDF2==3.0.1
 beautifulsoup4==4.12.3
-tiktoken>=0.5.2,<0.6.0
+tiktoken==0.6.0
 sentry-sdk==1.40.3
 async-lru==2.0.4
 tenacity==8.2.3
