--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ sqlmodel==0.0.16
 langchain==0.1.0
 langchain-openai==0.0.2
 langchain-community==0.0.9
+langchain-text-splitters
 resend==0.7.0
 unstructured==0.11.0
 pdfminer.six==20231228
