--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -27,5 +27,5 @@ RUN pip install --no-cache-dir --upgrade pip \
 COPY . .
 
 # Run the application
-# Railway passes PORT variable, but defaults to 8000 if not present
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Railway injects PORT environment variable - we must use it
+CMD uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}
