feat: security lockdown, deprecation fixes, and test improvements

--- a/backend/requirements-test.txt
+++ b/backend/requirements-test.txt
@@ -18,3 +18,21 @@ pytest-asyncio
 httpx
 black
 isort
+python-dotenv
+langchain-openai
+trafilatura
+slowapi
+sentry-sdk
+celery
+jinja2
+langchain
+langchain-text-splitters
+beautifulsoup4
+lxml
+beautifulsoup4
+lxml
+youtube-transcript-api
+jinja2
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
