--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,7 +29,7 @@ tiktoken>=0.5.2
 # --- UTILITIES ---
 celery==5.3.6
 resend==0.7.0
-sentry-sdk==1.40.3
+sentry-sdk[fastapi]>=2.35.0
 async-lru==2.0.4
 tenacity==8.2.3
 python-docx==1.1.0
